@startuml
skinparam classAttributeIconSize 0
caption Diagrama de Classes - br.univille.projfabsoft.entity
package br.univille.projfabsoft.entity {
    class Cliente {
        - Long id
        - String nome
        - String celular
        - String endereco
        - String cpf
        - List<Pedido> pedidos
        - List<Produto> favoritos
        + Long getId()
        + void setId(Long id)
        + String getNome()
        + void setNome(String nome)
        + String getCelular()
        + void setCelular(String celular)
        + String getEndereco()
        + void setEndereco(String endereco)
        + String getCpf()
        + void setCpf(String cpf)
        + List<Pedido> getPedidos()
        + void setPedidos(List<Pedido> pedidos)
        + List<Produto> getFavoritos()
        + void setFavoritos(List<Produto> favoritos)
    }

    class Produto {
        - Long id
        - String nome
        - String descricao
        - double preco
        - int quantidadeEstoque
        + Long getId()
        + void setId(Long id)
        + String getNome()
        + void setNome(String nome)
        + String getDescricao()
        + void setDescricao(String descricao)
        + double getPreco()
        + void setPreco(double preco)
        + int getQuantidadeEstoque()
        + void setQuantidadeEstoque(int quantidadeEstoque)
    }

    class Pedido {
        - Long id
        - Cliente cliente
        - List<Produto> produtos
        - double total
        + Long getId()
        + void setId(Long id)
        + Cliente getCliente()
        + void setCliente(Cliente cliente)
        + List<Produto> getProdutos()
        + void setProdutos(List<Produto> produtos)
        + double getTotal()
        + void setTotal(double total)
    }

    class Carrinho {
        - Long id
        - Cliente cliente
        - List<Produto> produtos
        + Long getId()
        + void setId(Long id)
        + Cliente getCliente()
        + void setCliente(Cliente cliente)
        + List<Produto> getProdutos()
        + void setProdutos(List<Produto> produtos)
    }

    class Favorito {
        - Long id
        - Cliente cliente
        - Produto produto
        + Long getId()
        + void setId(Long id)
        + Cliente getCliente()
        + void setCliente(Cliente cliente)
        + Produto getProduto()
        + void setProduto(Produto produto)
    }

    class Administrador {
        - Long id
        - String nome
        - String email
        + Long getId()
        + void setId(Long id)
        + String getNome()
        + void setNome(String nome)
        + String getEmail()
        + void setEmail(String email)
    }

    Cliente "1" -- "0..*" Pedido
    Cliente "1" -- "0..*" Produto : favoritos
    Pedido "1" -- "0..*" Produto
    Carrinho "1" -- "0..*" Produto
    Carrinho "1" -- "1" Cliente
    Favorito "1" -- "1" Cliente
    Favorito "1" -- "1" Produto
}
@enduml